--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,9 @@
 flask
+gunicorn
 openai-whisper
 spacy
-scipy
-sounddevice
 numpy
 flask-login
 flask-sqlalchemy
-schedule
 reportlab
 requests
-mediapipe
-opencv-python
-scikit-learn
-joblib
-pandas
-
-tensorflow>=2.10.0
-opencv-python>=4.7.0
-mediapipe>=0.10.0
-scikit-learn>=1.3.0
-pandas>=2.0.0
